k8s/specs/staging/ingress-nginx/ingress-cli.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mvp-cli-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    cert-manager.io/cluster-issuer: letsencrypt
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  rules:
  - host: $(STAGING_CLI_HOST)
    http:
      paths:
      - path: /sitecore/api/management
        pathType: Prefix
        backend:
         service:
            name: cm-cli
            port:
              number: 80
  tls:
  - secretName: sitecoredemo-tls
    hosts:
    - $(STAGING_CLI_HOST)
